<resources>
    <string name="app_title">ラストワン</string>
    <string name="introduction">さいごの　いっぽんを　けしたほうが　まけ。</string>
    <string name="one_player_battle">ひとりで　たいせん</string>
    <string name="two_players_battle">ふたりで　たいせん</string>
    <string name="version">version: </string>
    <string name="red">あか</string>
    <string name="blue">あお</string>
    <string name="you">あなた</string>
    <string name="s_turn">のばん</string>
    <string name="turn_select">どっちを　えらぶ？</string>
    <string name="first">せんこう</string>
    <string name="second">こうこう</string>
    <string name="remain">のこり</string>
    <string name="opponent_color_sign">●</string>
    <string name="opppnent">あいて：</string>
    <string name="toast_cant_draw">そのけしかたは　できません！</string>
    <string name="wins">のかち！</string>
    <string name="you_win">あなたのかち！</string>
    <string name="you_lose">あなたのまけ…</string>
    <string name="retry">もういちど</string>
    <string name="quit">やめる</string>
    <string name="tweet_1player_win">はいち「%1$s」で、つよさ「%2$s」にかちました！！</string>
    <string name="tweet_1player_lose">はいち「%1$s」で、つよさ「%2$s」にまけました…</string>
    <string name="settings">せってい</string>
    <string name="com_level">あいての　つよさ</string>
    <string name="com_level_poor">へっぽこ</string>
    <string name="com_level_weak">よわい</string>
    <string name="com_level_normal">ふつう</string>
    <string name="com_level_strong">つよい</string>
    <string name="com_level_very_strong">とてもつよい</string>
    <string name="com_level_strongest">さいきょう</string>
    <string name="settings_category_common">きょうつう</string>
    <string name="settings_sound">サウンド</string>
    <string name="settings_placement">はいち</string>
    <string name="placement_pyramid">ピラミッド</string>
    <string name="placement_flower">フラワー</string>
    <string name="placement_random">ランダム</string>
    <string name="settings_hint">ヒント：「ピラミッド」で、「%1$s」に　あと %2$d かい　かつと、あたらしい　つよさに　ちょうせん　できます。</string>
    <string name="history_title">たいせん　りれき</string>
>
</resources>
