<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_common">

        <SwitchPreferenceCompat
            app:key="sound"
            app:title="@string/settings_sound"
            app:defaultValue="true" />

        <ListPreference
            app:defaultValue="pyramid"
            app:entries="@array/placement_entries"
            app:entryValues="@array/placement_values"
            app:key="placement"
            app:title="@string/settings_placement"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/one_player_battle">

        <ListPreference
            app:defaultValue="weak"
            app:entries="@array/com_level_entries_default"
            app:entryValues="@array/com_level_values_default"
            app:key="com_level"
            app:title="@string/com_level"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>