<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/whose_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_unit"
        android:layout_marginStart="@dimen/margin_unit"
        android:text="@string/red"
        android:textSize="@dimen/text_game_normal"
        android:textColor="#ff0000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/whose_turn"
        android:layout_marginTop="@dimen/margin_unit"
        android:text="@string/s_turn"
        android:textSize="@dimen/text_game_normal"
        />

    <TextView
        android:id="@+id/pin_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_unit"
        android:layout_marginEnd="@dimen/margin_unit"
        android:textSize="@dimen/text_game_normal"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pin_remain"
        android:layout_marginTop="@dimen/margin_unit"
        android:text="@string/remain"
        android:textSize="@dimen/text_game_normal"
        />

    <TextView
        android:id="@+id/opponent_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/whose_turn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_unit"
        android:layout_marginStart="@dimen/margin_unit"
        android:text="@string/opponent_color_sign"
        android:textSize="@dimen/text_game_small"
        />
    <TextView
        android:id="@+id/opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/whose_turn"
        app:layout_constraintStart_toEndOf="@id/opponent_color"
        android:layout_marginTop="@dimen/margin_unit"
        android:text="@string/opppnent"
        android:textSize="@dimen/text_game_small"
        />
    <TextView
        android:id="@+id/opponent_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/whose_turn"
        app:layout_constraintStart_toEndOf="@id/opponent"
        android:layout_marginTop="@dimen/margin_unit"
        android:textSize="@dimen/text_game_small"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        app:layout_constraintTop_toBottomOf="@id/opponent">
        <LinearLayout
            android:id="@+id/game_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
        <xxx.prd.lastone.view.PaintView
            android:id="@+id/paint_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ProgressBar android:id="@+id/progressbar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminate="true"
            style="@android:style/Widget.ProgressBar" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>